--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,8 +7,17 @@
         {% endif %}
     </head>
     <body>
-        <div>Mircoblog: <a href="/index">Home</a><div>
+        <div>Mircoblog: <a href="/index">Home</a></div>
         <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+        {% for messages in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
