--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,12 +7,17 @@
         {% endif %}
     </head>
     <body>
-        <div>Mircoblog: <a href="/index">Home</a></div>
+        <div>Mircoblog:
+            <a href="/index">Home</a>
+            {% if g.user.is_authenticated %}
+            | <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
+        </div>
         <hr>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
-        {% for messages in messages %}
+        {% for message in messages %}
             <li>{{ message }}</li>
         {% endfor %}
         </ul>
